# poor-man-lakehouse

./: .env.example  .env_template  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  create-default-warehouse.json  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  zensical.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  docs.yml
configs/dremio/conf/: dremio.conf
configs/spark/: spark-defaults.conf
configs/unity_catalog/etc/conf/: hibernate.properties  server.properties
docs/: index.md
docs/guides/: catalog-browser.md  catalog-factory.md  configuration.md  connectors-overview.md  docker-services.md  dremio-connector.md  ibis-connector.md  installation.md  lakehouse-connector.md  polars-connector.md  pyiceberg-connector.md  quickstart.md  spark-cluster.md  spark-connector.md
docs/reference/: index.md
docs/superpowers/plans/: 2026-03-28-lakehouse-optimizations.md  2026-03-31-catalog-agnostic-refactor.md
docs/superpowers/specs/: 2026-03-31-catalog-agnostic-refactor-design.md  2026-03-31-glue-catalog-integration-design.md
notebooks/: delta_experiments.ipynb  demo.ipynb  dremio_experiments.ipynb  ducklake_example.py  ducklake_experiments.ipynb  ibis_experiments.ipynb  lakekeeper_explorer.py  polars_client.ipynb  polars_client_uc.py  pyiceberg_experiments.ipynb  pyspark_experiments.ipynb
scripts/: init_dremio.sh  init_lakekeeper_warehouse.sh
src/: __init__.py
src/poor_man_lakehouse/: __init__.py  catalog.py  catalog_browser.py  config.py  lakehouse.py
src/poor_man_lakehouse/dremio/: builder.py
src/poor_man_lakehouse/dremio_connector/: __init__.py  builder.py
src/poor_man_lakehouse/ibis/: builder.py
src/poor_man_lakehouse/ibis_connector/: __init__.py  builder.py
src/poor_man_lakehouse/polars/: __init__.py  client.py  magic.py
src/poor_man_lakehouse/polars_connector/: __init__.py  client.py  magic.py
src/poor_man_lakehouse/pyiceberg_connector/: __init__.py  client.py
src/poor_man_lakehouse/spark/: builder.py
src/poor_man_lakehouse/spark_connector/: __init__.py  builder.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_lakekeeper_roundtrip.py
tests/unit/: __init__.py  test_catalog.py  test_catalog_browser.py  test_config.py  test_dremio_connector.py  test_ibis_connector.py  test_lakehouse.py  test_polars_connector.py  test_pyiceberg_connector.py  test_spark_builder.py
