[project]
name = "poor-man-lakehouse"
version = "0.1.0"
description = "Attempt at implementing a local OSS lakehouse with tools like Polars, DuckDB, Delta, Iceberg and Minio."
keywords = ["lakehouse", "polars", "duckdb", "deltalake", "iceberg", "minio"]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Graziano Montanaro", email = "montanarograziano@users.noreply.github.com" },
]

dependencies = [
    "pyspark[sql,connect]<4.0.0",
    "delta-spark<4.0.0",
    "ibis-framework[duckdb,polars,pyspark]>=10.5.0",
    "minio>=7.2.15",
    "pyiceberg[s3fs,sql-sqlite]>=0.9.1",
    "polars>=1.32.0",
    "deltalake>=1.0.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "duckdb>=1.3.0",
]

[project.urls]
Repository = "https://github.com/montanarograziano/poor-man-lakehouse"
Documentation = "https://montanarograziano.github.io/poor-man-lakehouse/"
Homepage = "https://montanarograziano.github.io/poor-man-lakehouse/"

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "deptry>=0.23.0",
    "ipykernel>=6.29.5",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "types-requests>=2.32.4.20250611",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-gen-files<1.0.0,>=0.5.0",
    "mkdocs-literate-nav<1.0.0,>=0.6.1",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-material>=9.5.5",
    "mkdocs-minify-plugin>=0.7.2",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-section-index<1.0.0,>=0.3.9",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
]


[tool.mypy]
python_version = "3.12"
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["scripts", "docs", "test", "pyarrow"]

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true
