[project]
name = "poor-man-lakehouse"
version = "0.1.0"
description = "Attempt at implementing a local OSS lakehouse with tools like Polars, DuckDB, Delta, Iceberg and Minio."
keywords = ["lakehouse", "polars", "duckdb", "deltalake", "iceberg", "minio"]
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Graziano Montanaro", email = "montanarograziano@users.noreply.github.com" },
]

dependencies = [
    "delta-spark==4.0.1",
    "ibis-framework[duckdb,polars,pyspark]>=10.5.0",
    "minio>=7.2.15",
    "pyiceberg[s3fs,sql-postgres,sql-sqlite,pyiceberg-core]>=0.9.1",
    "polars>=1.37.0",
    "deltalake>=1.3.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "duckdb>=1.4.3",
    "setuptools>=80.9.0",
    "marimo>=0.17.7",
    "pysail==0.4.6",
    "pyspark[connect,sql]==4.0.1",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
package = true

[project.urls]
Repository = "https://github.com/montanarograziano/poor-man-lakehouse"
Documentation = "https://montanarograziano.github.io/poor-man-lakehouse/"
Homepage = "https://montanarograziano.github.io/poor-man-lakehouse/"

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "deptry>=0.23.0",
    "ipykernel>=6.29.5",
    "mypy>=1.16.0",
    "prek>=0.2.12",
    "pytest>=8.4.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.13",
    "types-requests>=2.32.4.20250611",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-gen-files<1.0.0,>=0.5.0",
    "mkdocs-literate-nav<1.0.0,>=0.6.1",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-material>=9.5.5",
    "mkdocs-minify-plugin>=0.7.2",
    "mkdocs-redirects>=1.2.1",
    "mkdocs-section-index<1.0.0,>=0.3.9",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.8.0",
]


[tool.mypy]
python_version = "3.12"
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["scripts", "docs", "pyarrow"]

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ibis.*"
ignore_missing_imports = true

#### RUFF
[tool.ruff]
line-length = 120
indent-width = 4
output-format = "concise"
# Assume Python 3.10.
target-version = "py312"

# A list of file patterns to include when linting.
# include = ["**/pyproject.toml", "*.py", "*.pyi"]
# extend-include = ["*.ipynb"]

# Always autofix, but never try to fix `F401` (unused imports).
fix = true

# Exclude a variety of commonly ignored directories (you can have some problems)
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "*ipynb_checkpoints",
    # "*.ipynb",
    "test/*",
    "__init__.py",
    "notebooks/data_explorer.py",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["F401"]
# Rules: https://beta.ruff.rs/docs/rules/
# Enable Pyflakes `E` and `F` codes by default.
select = [
    #default
    "E", # pycodestyle error
    "F", #flake8 error
    #extra
    "A",   # bultin shadowing
    "B",   # flake8 bugbear
    "BLE", # aboid bare excepts
    "C4",  # simplify comprehensions
    "D",   # docstyle
    "DTZ", # datetime errors
    "FBT", # avoid boolean trap
    "G",   # logging format
    "I",   # flake8-isort import
    "N",   # pep8 naming
    "RET", # return statements values
    "S",   # bandit
    "YTT", # wrong usage of sys.info
    "B",   # flake8-bugbear
]
ignore = [
    "B008",   # do not perform function calls in argument defaults
    "BLE001", #Do not catch blind exception: {name}
    "C901",   # too complex
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "D417",   # Missing argument description in the docstring for {definition}: {name}
    "E501",   # Line too long ({width} > {limit} characters)
    "E501",   # line too long, handled by black
    "D100",
    "FBT001", # boolean trap
    "FBT002", # boolean trap
    "G004",   # logging statement using fstring formatting
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# select = ["E4", "E7", "E9", "F"]
# ignore = []
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401", "I002"]
"test*.py" = ["S101", "T201"]
"notebooks/*ipynb" = ["S608"]

#### PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require docker-compose)",
    "slow: Slow tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

#### COVERAGE
[tool.coverage.run]
source = ["src/poor_man_lakehouse"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 0
show_missing = true
